    applet lists
  * Fixes: DcpContentItem could not be clicked until the applet got loaded
  * Fixes: NB#189265 - Tapping Settings button in status menu does not
    open settings view
  * Changes: Adds tracker::TrackerReadAccess credential
  * Fixes: NB#191373 -  Source package 'duicontrolpanel' interfaces not
    frozen in 0.2010.36-5

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 15 Sep 2010 11:22:20 +0200

duicontrolpanel (0.8.12.1) unstable; urgency=low

  * Fixes: NB#184916 - Back button closes the controlpanel in this
    scenario
  * Fixes: NB#188215 -  Look and feel settings uses wrong object names
  * Fixes: NB#188203 -  System Settings main view uses wrong object
    names
  * Adds icons to category menus (updated ui to spec 1.5)

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 06 Sep 2010 16:51:14 +0200

duicontrolpanel (0.8.11) unstable; urgency=low

  * Fixes: declarative applet could not modify gconf keys
  * Adds credential for Cellular usage, and for datetime applet
  * Theme loading support for the binary applets

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 01 Sep 2010 10:16:43 +0200

duicontrolpanel (0.8.10) unstable; urgency=low

  * Fixes: Avoid showing the briefview in two step in case the applet is
    already loaded

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 31 Aug 2010 16:25:57 +0200

duicontrolpanel (0.8.9) unstable; urgency=low

  * Optimization: filter out unnecessery languageChange events
  * Implements two-step applet loading: static content gets shown until
    the applet is not yet loaded
  * Fixes: NB#183938 - UI freeze when connectivity opened for the first
    time after device flash

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 24 Aug 2010 17:49:54 +0200

duicontrolpanel (0.8.8) unstable; urgency=low

  [ Robert Manner ]
  * Example update: Itemlike binaryplugin shows an example about how to load
    stylesheet for its widget

  [ Viktor Nagy ]