@@ -243,7 +243,22 @@ DcpAppletButtons::addComponent (DcpAppletMetadata *metadata,
         button->setSizePolicy (QSizePolicy::Expanding, QSizePolicy::Fixed);
 
         // put it before the mlist:
+#if 0
         mLayout()->insertItem (getItemCount()-1, button);
+#else
+        // FIXME: this is a workaround for 188565 -  Offline mode button is left aligned...
+        // It is a layout bug in Qt, please remove this, after NB#188780 gets fixed.
+
+        QGraphicsWidget* spacer1 = new QGraphicsWidget();
+        QGraphicsWidget* spacer2 = new QGraphicsWidget();
+        spacer1->setSizePolicy (QSizePolicy::Expanding, QSizePolicy::Expanding);
+        spacer2->setSizePolicy (QSizePolicy::Expanding, QSizePolicy::Expanding);
+        QGraphicsLinearLayout* wlayout = new QGraphicsLinearLayout();
+        wlayout->addItem (spacer1);
+        wlayout->addItem (button);
+        wlayout->addItem (spacer2);
+        mLayout()->insertItem (getItemCount()-1, wlayout);
+#endif
 
     } else {
         QString mattiID = "DcpContentItem::" + mattiPostfix;
