@@ -8,8 +8,9 @@ duicontrolpanel (0.8.13~unreleased) unstable; urgency=low
   * Changes: Adds tracker::TrackerReadAccess credential
   * Fixes: NB#191373 -  Source package 'duicontrolpanel' interfaces not
     frozen in 0.2010.36-5
+  * Workarounds: 188565 -  Offline mode button is left aligned...
 
- -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 15 Sep 2010 11:22:20 +0200
+ -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 15 Sep 2010 12:28:02 +0200
 
 duicontrolpanel (0.8.12.1) unstable; urgency=low
 
